backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rplace-backend
  namespace: rplace
  labels:
    app: backend
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: harbor.k8s.inpt.fr/rplace/backend:v1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
